app-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-demo-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-demo
  template:
    metadata:
      labels:
        app: app-demo
    spec:
      containers:
        - name: app-demo-ui-deployment
          image: gcr.io/double-aleph-348710/app-demo-ui:v7
          
        
---
apiVersion: v1
kind: Service
metadata:
  name: app-demo-ui-service
spec:
  type: LoadBalancer
  selector:
    app: app-demo
  ports:
    - name: app-demo-ui
      port: 3000
      targetPort: 3000
