ingress-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: "34.135.240.58.nip.io"
    http:
      paths:
      - path: /api/.*
        pathType: Prefix
        backend:
          service:
            name: app-demo-ms-service
            port:
              number: 8081
